--- a/Baitapvenha.html/test.html
+++ b/Baitapvenha.html/test.html
@@ -40,19 +40,13 @@
             height: 35px;
             margin-top: 10px;
         }
-        .sdt{
-            margin-bottom: 20px;
-        }
         .diachi{
             margin-top: 8px;
         }
-        .mail{
+        .mail,.matkhau{
             margin-bottom: 20px;
         }
-        .matkhau{
-            margin-bottom: 20px;
-        }
-        .ghilaimk{
+        .ghilaimk,.sdt{
             margin-bottom: 30px;
         }
         .nut{
@@ -101,8 +95,8 @@
     </form>    
     <form action="" class="bieumau2">
         <div>
-        Phone:<br>
-        <input type="text" class="sdt" name="phone" placeholder="+91">
+        <label for="phone">Phone:</label><br>
+        <input type="tel" class="sdt"  name="phone" placeholder="+91">
         <br>
         <input type="text" class="sdt1" placeholder="phone no">
         <br><br>
