--- a/Baitapvenha.html/test2.html
+++ b/Baitapvenha.html/test2.html
@@ -129,19 +129,25 @@
                         </div>
                         <p class="noidung"><b>CREATIVE DESIGNER</b></p>
                         <div class="noidung" id="address">
+                            <i class="fa-solid fa-user"></i>
                             Google Inc USA
+                            <i class="fa-solid fa-user"></i>
                             20 Sep 2010-Current
                         </div>
                         <p class="noidung">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nist ut aliquip ex ea commodo consequat.</p>
                         <p class="noidung"><b>ANDROID DEVELOPER</b></p> 
                         <div class="noidung" id="address">
+                            <i class="fa-solid fa-user"></i>
                             Google Inc USA
+                            <i class="fa-solid fa-user"></i>
                             20 Sep 2010-Current
                         </div>
                         <p class="noidung">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                         <p class="noidung"><b>SENIOR ARTIST & DIRECTOR</b></p>
                         <div class="noidung" id="address">
+                            <i class="fa-solid fa-user"></i>
                             Google Inc USA
+                            <i class="fa-solid fa-user"></i>
                             20 Sep 2010-Current
                         </div>
                         <p class="noidung">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt</p>                 
@@ -156,13 +162,17 @@
                         </div>
                         <p class="noidung"><b>MASTER OF DESIGN</b></p>
                         <div class="noidung" id="address">
+                            <i class="fa-solid fa-user"></i>
                             Stanford University
+                            <i class="fa-solid fa-user"></i>
                             20 Sep 2010-Current
                         </div>
                         <p class="noidung">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nist ut aliquip ex ea commodo consequat.</p>
                         <p class="noidung"><b>BACHELOR OF ARTS</b></p>
                         <div class="noidung" id="address">
+                            <i class="fa-solid fa-user"></i>
                             Stanford University
+                            <i class="fa-solid fa-user"></i>
                             20 Sep 2010-Current
                         </div>
                         <p class="noidung">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
