--- a/Baitapvenha.html/web.html
+++ b/Baitapvenha.html/web.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="footer-right">
                     <p class="footer-company-about">
-                        <span>Back - End Developer</span>
+                        <span>Cellphone S</span>
                         <strong>Lê Bá Thành</strong>
                     <div class="footer-icons">
                         <a href="#"><i class="fa fa-facebook"></i></a>
